--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
     <main>
         <div id="left">
             <h2 id="form-title">Entrez les données du bien à évaluer</h2>
-            <form action="/predict" method="post">
+            <form action="/predict" method="get">
                 <ul class="predict">
                     <li class="predict-li">
                         <label for="property-select">Type de bien</label>
