works with model

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="main">
-        <h1>Give your models to the World !</h1>
+        <h1>Simplon Bordeaux G6 - Real Estate Project</h1>
         <nav>
             <a href="/predict">predict</a>
         </nav>
