Update predict nb_de_piece to Nombre de piece

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -18,7 +18,7 @@
         <label for="type_de_bien">Type de bien:</label>
         <input type="text" id="type_de_bien" name="type_de_bien"/>
         <label for="nb_de_pieces">nb_de_pieces:</label>
-        <input type="number" id="nb_de_pieces" name="nb_de_pieces"/>
+        <input type="number" id="nb_de_pieces" name="Nombre de_pieces"/>
         <label for="surface">surface:</label>
         <input type="number" id="surface" name="surface"/>
         <label for="ville">ville:</label>
