--- a/templates/predict.html
+++ b/templates/predict.html
@@ -18,11 +18,11 @@
         <label for="type_de_bien">Type de bien:</label>
         <input type="text" id="type_de_bien" name="type_de_bien"/>
         <label for="nb_de_pieces">nb_de_pieces:</label>
-        <input type="number" id="nb_de_pieces" name="Nombre de_pieces"/>
+        <input type="number" id="nb_de_pieces" name="Nombre de pieces"/>
         <label for="surface">surface:</label>
-        <input type="number" id="surface" name="surface"/>
+        <input type="number" id="surface" name="Surface"/>
         <label for="ville">ville:</label>
-        <input type="text" id="ville" name="ville"/>
+        <input type="text" id="ville" name="Ville"/>
         <button>Submit</button>
     </form>
     
