--- a/templates/predict.html
+++ b/templates/predict.html
@@ -17,12 +17,12 @@
     <form action="/predict" method="post">
         <label for="type_de_bien">Type de bien:</label>
         <input type="text" id="type_de_bien" name="type_de_bien"/>
-        <label for="nb_de_pieces">nb_de_pieces:</label>
-        <input type="number" id="nb_de_pieces" name="Nombre de pieces"/>
-        <label for="surface">surface:</label>
-        <input type="number" id="surface" name="Surface"/>
-        <label for="ville">ville:</label>
-        <input type="text" id="ville" name="Ville"/>
+        <label for="nb_de_pieces">Nombre de pieces:</label>
+        <input type="number" id="nb_de_pieces" name="nb_de_pieces"/>
+        <label for="surface">Surface:</label>
+        <input type="number" id="surface" name="surface"/>
+        <label for="ville">Ville:</label>
+        <input type="text" id="ville" name="ville"/>
         <button>Submit</button>
     </form>
     
