--- a/app/flask/templates/predict.html
+++ b/app/flask/templates/predict.html
@@ -17,11 +17,11 @@
     <form action="/predict" method="post">
         <label for="type_de_bien">Type de bien:</label>
         <input type="text" id="type_de_bien" name="type_de_bien"/>
-        <label for="nb_de_pieces">Nombre de pieces:</label>
+        <label for="nb_de_pieces">Nombre de pièces:</label>
         <input type="number" id="nb_de_pieces" name="nb_de_pieces"/>
-        <label for="surface">Surface:</label>
+        <label for="surface">surface:</label>
         <input type="number" id="surface" name="surface"/>
-        <label for="ville">Ville:</label>
+        <label for="ville">ville:</label>
         <input type="text" id="ville" name="ville"/>
         <button>Submit</button>
     </form>
