--- a/app/flask/templates/index.html
+++ b/app/flask/templates/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <title>Fast Immo</title>
 </head>
 <body>
-    <div id="main">
-        <h1>Simplon Bordeaux G6 - Real Estate Project</h1>
-        <nav>
-            <a href="/predict">predict</a>
-        </nav>
-    </div>
+    <header class="hero">
+        <div class="hero-body">
+            <div class="container">
+                <h1 class="title">
+                    Fast Immo
+                </h1>
+                <h2 class="subtitle">
+                    Le juste prix de votre bien immobilier
+                </h2>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
