--- a/app/flask/templates/predict.html
+++ b/app/flask/templates/predict.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Fast Immo</title>
 </head>
 <body>
     <nav>
@@ -16,13 +16,13 @@
     <p>New Prediction here:</p>
     <form action="/predict" method="post">
         <label for="type_de_bien">Type de bien:</label>
-        <input type="text" id="type_de_bien" name="type_de_bien"/>
+        <input type="text" id="type_de_bien" name="type_de_bien" required=true/>
         <label for="nb_de_pieces">Nombre de pièces:</label>
-        <input type="number" id="nb_de_pieces" name="nb_de_pieces"/>
+        <input type="number" id="nb_de_pieces" name="nb_de_pieces" required=true/>
         <label for="surface">surface:</label>
-        <input type="number" id="surface" name="surface"/>
+        <input type="number" id="surface" name="surface" required=true/>
         <label for="ville">ville:</label>
-        <input type="text" id="ville" name="ville"/>
+        <input type="text" id="ville" name="ville" required=true/>
         <button>Submit</button>
     </form>
     
